# vault-chat

./: .eslintrc.json  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  PACKAGING.md  README.md  _check.cjs  index.html  package-lock.json  package.json  tailwind.config.js
.claude/: launch.json
.github/workflows/: implementer.yml  release.yml  ship-maintainer.yml  ship.yml  task-resume.yml
docs/: chat-pipeline.md  frontend-layout.md  gotchas.md  state-and-persistence.md  tools-and-meta.md
maintainer/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
maintainer/src/: Activity.tsx  App.tsx  Chat.tsx  NewIssueModal.tsx  System.tsx  Tasks.tsx  Triage.tsx  UpdateBanner.tsx  github.ts  lib.ts  main.tsx  planner-tools.ts  store.ts  style.css
maintainer/src-tauri/: Cargo.toml  tauri.conf.json
maintainer/src-tauri/capabilities/: default.json
maintainer/src-tauri/src/: lib.rs  main.rs
meta-tools-staging/: system.md
meta-tools-staging/youtube/: TOOL.md  run.py
scripts/: bump-version.mjs
src/: App.css  App.tsx  BlockEditor.tsx  ChatPane.tsx  ChatWindow.tsx  CodeView.tsx  FeedbackPopup.tsx  FileTree.tsx  FindBar.tsx  HistoryModal.tsx  HtmlView.tsx  ImageView.tsx  InlineEditPrompt.tsx  LiveEditor.tsx  MarkdownArea.tsx  MarkdownView.tsx  MonacoEditor.tsx  NotePopup.tsx  NotebookView.tsx  NotesPanel.tsx  PdfView.tsx  SettingsPane.tsx  Titlebar.tsx  UnsupportedView.tsx  UpdateBanner.tsx  agent.ts  chat-controller.ts  commit-controller.ts  compactor.ts  context.ts  dnd.ts  feedback.ts  fileKind.ts  find.ts  git.ts  inlineEdit.ts  keychain.ts  linkNav.ts  main.tsx  meta.ts  (+14 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/defaults/: README.md  system.md
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mobile.html  server.rs
