[package]
name = "vault-chat-maintainer"
version = "0.1.12"
description = "vault-chat maintainer companion app"
authors = ["carlwilsn"]
edition = "2021"

[lib]
name = "vault_chat_maintainer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
# Same feature flags as the main app — without `windows-native` keyring v3
# falls back to a backend that doesn't see Windows Credential Manager
# entries, so the PAT the main app stored is invisible to us.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
open = "5"
reqwest = { version = "0.12", features = ["rustls-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
